[project]
name = "comfyui-autolabel"
description = "ComfyUI-AutoLabel is a custom node for ComfyUI that uses BLIP (Bootstrapping Language-Image Pre-training) to generate detailed descriptions of the main object in an image. This node leverages the power of BLIP to provide accurate and context-aware captions for images."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/fexploit/ComfyUI-AutoLabel"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AutoLabel"
Icon = ""
